Closed Bug 26917 Opened 25 years ago Closed 23 years ago

Form submit should not append vars for javascript: actions

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED
Future

People

(Reporter: pollmann, Assigned: pollmann)

References

()

Details

(Whiteboard: Fix in hand)

Attachments

(1 file)

When a form has ACTION="javascript://..." METHOD=GET, we are appending the URI
encoded variables and values in the form to the javascript expression.  This
causes javascript errors.
See bug 26587
Status: NEW → ASSIGNED
See related bug 25330
Whiteboard: Fix in hand
Target Milestone: M15
Attached file Test Case
Fix checked in.  Submitting this form should display javascript:23 (a page with
the text '23' on it and nothing else).  The URL bar should *not* read
javscript:23?Sub=Dimension.  Thanks!
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Updating QA contact.
QA Contact: ckritzer → vladimire
Reopening The testcase is not working. The form isnt even submitted or at least 
nothing changes when submit button is clicked. No javascript errors are 
generated though.

Ran this test in N4.7 - JavaScript error.
Ran this test in IE5  - Works like it should.
N6 build 2000-09-25-08-M18 on Windows 98  - No errors, nothing happens.
N6 build 2000-09-19-21-M18 on Linux RedHat6.2 - No errors, nothing happens.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Removing past milestone
Status: REOPENED → ASSIGNED
Target Milestone: M15 → ---
vladimire@netscape.com: does it still happen with the most recent build?
Target Milestone: --- → Future
This works now, marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago23 years ago
Resolution: --- → FIXED
Marking verified. Vladimire tested it. Its Fixed.
Status: RESOLVED → VERIFIED
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: