Bug 26917: Form submit should not append variables to javascript: actions r=harishd